--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                     dive into specialty pour over coffee and manual espresso.
                 </p>
                 <p>
-                    In highschool my friends and I would go bouldering pretty regularly. During my Ph.D. I got back in
+                    During high school, my friends and I frequently went bouldering. During my Ph.D. I got back in
                     to the sport and regularly climb at my local climbing gym as well as the Niagara Glen, Rattlesnake
                     Point, and other climbing crags in Southern Ontario.
                 </p>
