--- a/code.html
+++ b/code.html
@@ -80,7 +80,7 @@
                     during that particular gauche period in internet history where everyone used flash intros to their
                     website, so I also started to learn Actionscript and Adobe Flash throughout highschool prompting me
                     to make various flash video games (from which I made a small sum of money).</p>
-                <p>Nowadays I primarily program in Python and C. I have extensive experience in various python libraries
+                <p>Nowadays I primarily program in Python and C. I have extensive experience in various Python libraries
                     including PyTorch, Tensorflow, Numpy, Scipy, Keras, SciKit-Learn, Matplotlib, and Fenics.
                 </p>
                 <p>
@@ -95,8 +95,8 @@
                     People often ask me why I prefer Python as a programming environment. I enjoy that I can link Python
                     code to compiled C code quite easily (or write in a C-like manner with Cython). This allows me to
                     leverage the high-level readability of Python while still enjoying incredible low-level performance.
-                    This is especially important in collaborations. In my experience, in collaborations there is often a
-                    very heterogeneous level of programming comfort. In this way, we can abstract the complicated and
+                    This is especially important in collaborations. In my experience, collaborators often have varying 
+                    levels of programming proficiency. In this way, we can abstract the complicated and
                     computationally expensive parts of the project into linked C libraries or Cython code, while
                     allowing the raw Python code to handle all the high-level interactions. As such, the less
                     computationally savvy collaborators feel comfortable experimenting and changing the raw-Python
