--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="col-md-5 text-start">
                 <p>
                     This is the personal website of Brydon Eastman. I am currently doing research at Thinking Machines
-                    Lab. Previouslsy, I was a Research Scientist at OpenAI. Before that I received my Ph.D. in Applied
+                    Lab. Previously, I was a Research Scientist at OpenAI. Before that I received my Ph.D. in Applied
                     Mathematics from the University of Waterloo (May, 2022) in the Math Medicine Lab under the
                     supervision of <a href="http://math.uwaterloo.ca/~kohandel/" title="Mohammad Kohandel">Mohammad
                         Kohandel</a>. Previously I obtained an M.Sc. from McMaster University under the supervision of
@@ -94,12 +94,12 @@
                     awards for both my teaching and my research.
                 </p>
                 <p>
-                    Currently, my research interests invoke my Computer Science background more than my Applied Math
-                    background -- though I find the parallels uncanny. I am concerned with research around Artificial
-                    General Intelligence including, broadly, issues in safety, alignment, and how self-improving AI
-                    relates to these goals. I feel deeply inspired and humbled by the power of these large networks and
-                    I feel an incredible responsibility to, in whatever little way I can, act as a midwife in the advent
-                    of this new age of computing.
+                    Currently, my research interests draw more upon my Computer Science background than my Applied Math
+                    background—though I find the parallels between the two fields striking. I am concerned with research 
+                    around Artificial General Intelligence including, broadly, issues in safety, alignment, and how 
+                    self-improving AI relates to these goals. I feel deeply inspired and humbled by the power of these 
+                    large networks and I feel an incredible responsibility to, in whatever little way I can, act as a 
+                    midwife in the advent of this new age of computing.
                 </p>
                 <p>
                     During graduate school my research interests skewed towards computational biology and general
