--- a/research.html
+++ b/research.html
@@ -152,7 +152,7 @@
                                                 called the predator that consumes the prey. There is implicitly some
                                                 benefit to this for the predator which mathematically we represent by
                                                 the <em>predator response function</em>.</p>
-                                            <p>Roughly, the predator respponse function represents the fitness benefit
+                                            <p>Roughly, the predator response function represents the fitness benefit
                                                 to the predator for consuming a certain amount of prey. Typically the
                                                 predator response function is a saturating function such that it's
                                                 always positive, always increasing, and always less than some total
