--- a/index.html
+++ b/index.html
@@ -82,40 +82,39 @@
             </div>
             <div class="col-md-5 text-start">
                 <p>
-                    This is the personal website of Brydon Eastman. I am currently doing research at Thinking Machines
-                    Lab. Previously, I was a Research Scientist at OpenAI. Before that I received my Ph.D. in Applied
-                    Mathematics from the University of Waterloo (May, 2022) in the Math Medicine Lab under the
-                    supervision of <a href="http://math.uwaterloo.ca/~kohandel/" title="Mohammad Kohandel">Mohammad
-                        Kohandel</a>. Previously I obtained an M.Sc. from McMaster University under the supervision of
+                    Welcome to my personal website. I'm currently conducting research at Thinking Machines
+                    Lab. Prior to this, I served as a Research Scientist at OpenAI. I completed my Ph.D. in Applied
+                    Mathematics at the University of Waterloo (May, 2022) in the Math Medicine Lab under the
+                    guidance of <a href="http://math.uwaterloo.ca/~kohandel/" title="Mohammad Kohandel">Mohammad
+                        Kohandel</a>. My academic journey also includes an M.Sc. from McMaster University under
                     <a href="https://ms.mcmaster.ca/wolkowic/wordpress/" title="Gail Wolkowicz">Gail Wolkowicz</a> and a
-                    B.Sc. (Hons) in Math and Computer Science from Redeemer University with my thesis supervised by <a
+                    B.Sc. (Hons) in Math and Computer Science from Redeemer University with a thesis supervised by <a
                         href="https://www.redeemer.ca/our-faculty/dr-kevin-vander-meulen/"
-                        title="Kevin Vander Meulen">Kevin Vander Meulen</a>. I am grateful to have received multiple
-                    awards for both my teaching and my research.
+                        title="Kevin Vander Meulen">Kevin Vander Meulen</a>. Throughout my career, I've been fortunate to receive
+                    recognition for both my teaching and research contributions.
                 </p>
                 <p>
-                    Currently, my research interests draw more upon my Computer Science background than my Applied Math
-                    background—though I find the parallels between the two fields striking. I am concerned with research 
-                    around Artificial General Intelligence including, broadly, issues in safety, alignment, and how 
-                    self-improving AI relates to these goals. I feel deeply inspired and humbled by the power of these 
-                    large networks and I feel an incredible responsibility to, in whatever little way I can, act as a 
-                    midwife in the advent of this new age of computing.
+                    My current research interests leverage my Computer Science background more than my Applied Mathematics
+                    foundation—though I continue to be fascinated by the remarkable parallels between these disciplines. My focus lies in
+                    Artificial General Intelligence research, encompassing safety, alignment, and the implications of
+                    self-improving AI systems. The capabilities of these large networks both inspire and humble me, and I feel
+                    a profound responsibility to contribute, however modestly, to guiding the development of this transformative
+                    era in computing.
                 </p>
                 <p>
-                    During graduate school my research interests skewed towards computational biology and general
-                    mathematical modelling of biological processes, systems, and phenomena. In particular, my Ph.D.
-                    Thesis was interested in applying machine learning/artificial intelligence techniques in tandem with
-                    differential equations and stochastic models to answer questions of cancer stem cell evolution and
-                    treatment response in the study of human cancers. I find biological systems to be fascinating in
-                    their complexity and hope to elucidate their behaviour by using stochastic machine learning
-                    techniques coupled with traditional models. After all, nature has <a href="https://xkcd.com/1605/"
-                        title="Relevant XKCD">no compunction to regulate towards easy description</a> even if it does so
-                    in aggregate.
+                    During my graduate studies, I concentrated on computational biology and mathematical modeling of biological
+                    systems and processes. My Ph.D. thesis specifically explored the application of machine learning/AI techniques
+                    in conjunction with differential equations and stochastic models to investigate cancer stem cell evolution and
+                    treatment response in human cancers. The intricate complexity of biological systems continues to fascinate me,
+                    and I aim to illuminate their behavior through stochastic machine learning approaches paired with conventional
+                    models. After all, as illustrated by <a href="https://xkcd.com/1605/"
+                        title="Relevant XKCD">this XKCD comic</a>, nature rarely arranges itself for straightforward description,
+                    even if patterns emerge in the aggregate.
                 </p>
                 <p>
-                    Here you will find useful information about me, my research interests, teaching and tutorial
-                    resources, and updates of what I'm up to. Please <a href="contact.html" title="Contact Me">contact
-                        me</a> if you have any questions!
+                    This website houses information about my background, research interests, teaching resources, and current
+                    activities. Please don't hesitate to <a href="contact.html" title="Contact Me">reach out</a> if you have
+                    any questions or would like to connect!
                 </p>
             </div>
         </div>
