--- a/index.html
+++ b/index.html
@@ -82,8 +82,18 @@
             </div>
             <div class="col-md-5 text-start">
                 <p>
-                    Welcome to my personal website. I'm currently conducting research at Thinking Machines
-                    Lab. Prior to this, I served as a Research Scientist at OpenAI. I completed my Ph.D. in Applied
+                    Welcome to my personal website. I'm currently helping conduct posttraining and human data research 
+                    at Thinking Machines Lab. Prior to this, I worked in research at OpenAI for a little more than 2 years. 
+                    My research interests at OpenAI focused on the symbiosis of human and machine intelligence. I am deeply
+                    interested both in the ways in which these new tools can be used to enhance human capabilities and 
+                    understanding and in the ways in which human intelligence can be used to improve that of the machines.
+                    The interplay between human and machine intelligence is a fascinating topic, and I'm excited to continue
+                    working on it and am very pleased that I've been able to conduct this research under the tutelage of people
+                    who genuinely care about ensuring that the epochal changes brought about by this technology are for the 
+                    betterment of our species writ large.
+                </p>
+                <p>
+                    Before my move to industry I was certain I'd keep my career within academia. I completed my Ph.D. in Applied
                     Mathematics at the University of Waterloo (May, 2022) in the Math Medicine Lab under the
                     guidance of <a href="http://math.uwaterloo.ca/~kohandel/" title="Mohammad Kohandel">Mohammad
                         Kohandel</a>. My academic journey also includes an M.Sc. from McMaster University under
@@ -91,7 +101,8 @@
                     B.Sc. (Hons) in Math and Computer Science from Redeemer University with a thesis supervised by <a
                         href="https://www.redeemer.ca/our-faculty/dr-kevin-vander-meulen/"
                         title="Kevin Vander Meulen">Kevin Vander Meulen</a>. Throughout my career, I've been fortunate to receive
-                    recognition for both my teaching and research contributions.
+                    recognition for both my teaching and research contributions. I love teaching and am very grateful for the 
+                    opportunities that I've had to help students discover their own aptitudes and interests.
                 </p>
                 <p>
                     My current research interests leverage my Computer Science background more than my Applied Mathematics
