--- a/index.html
+++ b/index.html
@@ -75,56 +75,54 @@
             <div class="col-md-5 me">
                 <a href="mailto:b2eastma@uwaterloo.ca" title="Email Me"><img class="img-profile" src="images/me.jpg"
                         width="300" alt="Photo of Brydon Eastman" /></a>
-                <h3>Brydon Eastman, Ph.D.</h3>
-                <p>Member of Technical Staff, Research Scientist</p>
-                <p><a href="https://thinkingmachines.ai/" target="_blank" title="Thinking Machines">Thinking
+                <h3>Brydon Eastman</h3>
+                <p>Big ol' nerd &commat; <a href="https://thinkingmachines.ai/" target="_blank"
+                        title="Thinking Machines">Thinking
                         Machines</a></p>
             </div>
             <div class="col-md-5 text-start">
                 <p>
-                    Welcome to my personal website. I'm currently helping conduct posttraining and human data research 
-                    at Thinking Machines Lab. Prior to this, I worked in research at OpenAI for a little more than 2 years. 
-                    My research interests at OpenAI focused on the symbiosis of human and machine intelligence. I am deeply
-                    interested both in the ways in which these new tools can be used to enhance human capabilities and 
-                    understanding and in the ways in which human intelligence can be used to improve that of the machines.
-                    The interplay between human and machine intelligence is a fascinating topic, and I'm excited to continue
-                    working on it and am very pleased that I've been able to conduct this research under the tutelage of people
-                    who genuinely care about ensuring that the epochal changes brought about by this technology are for the 
-                    betterment of our species writ large.
+                    Hi I'm Brydon! Thanks for checking out my website.
                 </p>
                 <p>
-                    Before my move to industry I was certain I'd keep my career within academia. I completed my Ph.D. in Applied
-                    Mathematics at the University of Waterloo (May, 2022) in the Math Medicine Lab under the
-                    guidance of <a href="http://math.uwaterloo.ca/~kohandel/" title="Mohammad Kohandel">Mohammad
-                        Kohandel</a>. My academic journey also includes an M.Sc. from McMaster University under
-                    <a href="https://ms.mcmaster.ca/wolkowic/wordpress/" title="Gail Wolkowicz">Gail Wolkowicz</a> and a
-                    B.Sc. (Hons) in Math and Computer Science from Redeemer University with a thesis supervised by <a
-                        href="https://www.redeemer.ca/our-faculty/dr-kevin-vander-meulen/"
-                        title="Kevin Vander Meulen">Kevin Vander Meulen</a>. Throughout my career, I've been fortunate to receive
-                    recognition for both my teaching and research contributions. I love teaching and am very grateful for the 
-                    opportunities that I've had to help students discover their own aptitudes and interests.
+                    tl;dr
+                <ul>
+                    <li>I'm currently doing research at Thinking Machines Lab.</li>
+                    <li>Previously, I did research at OpenAI</li>
+                    <li>Before that I did a PhD in applied math (focusing on mathematical oncology) at the University of
+                        Waterloo</li>
+                    <li>And before <strong>that</strong>, I did a math bio M.Sc. at McMaster University and an undergrad
+                        in Math and CS at Redeemer University</li>
+                </ul>
+
+
                 </p>
                 <p>
-                    My current research interests leverage my Computer Science background more than my Applied Mathematics
-                    foundation—though I continue to be fascinated by the remarkable parallels between these disciplines. My focus lies in
-                    Artificial General Intelligence research, encompassing safety, alignment, and the implications of
-                    self-improving AI systems. The capabilities of these large networks both inspire and humble me, and I feel
-                    a profound responsibility to contribute, however modestly, to guiding the development of this transformative
-                    era in computing.
+                    My current research interests leverage my Computer Science background more than my Applied
+                    Mathematics
+                    one -- though I find the parallels between Math Bio and modern ML to be <a
+                        href="https://xkcd.com/1605/" title="Relevant XKCD">fascinating</a> and overlooked.
+                    My focus lies in posttraining research involving RL and both human and synthetic data. I am very,
+                    very
+                    interested in the idea of self-improving systems and how best to leverage humans to achieve this.
+                    I've
+                    always liked the metaphor of midwife for my work -- the next era of computing is coming, and even if
+                    we
+                    wanted to stop it we couldn't -- the most impactful and high leverage place for me to be in this
+                    liminal
+                    period is in the room, helping to ensure that we collectively stick the landing, and doing
+                    everything we
+                    can to ensure that the delivery of this epochal change results in a world where humanity is
+                    exemplified,
+                    not diminished, and where the tremendous power of these systems are harnessed for the broad
+                    flourishing
+                    of all humanity.
                 </p>
                 <p>
-                    During my graduate studies, I concentrated on computational biology and mathematical modeling of biological
-                    systems and processes. My Ph.D. thesis specifically explored the application of machine learning/AI techniques
-                    in conjunction with differential equations and stochastic models to investigate cancer stem cell evolution and
-                    treatment response in human cancers. The intricate complexity of biological systems continues to fascinate me,
-                    and I aim to illuminate their behavior through stochastic machine learning approaches paired with conventional
-                    models. After all, as illustrated by <a href="https://xkcd.com/1605/"
-                        title="Relevant XKCD">this XKCD comic</a>, nature rarely arranges itself for straightforward description,
-                    even if patterns emerge in the aggregate.
-                </p>
-                <p>
-                    This website houses information about my background, research interests, teaching resources, and current
-                    activities. Please don't hesitate to <a href="contact.html" title="Contact Me">reach out</a> if you have
+                    This website contains information about my background, research interests, teaching resources, and
+                    current
+                    activities. Please don't hesitate to <a href="contact.html" title="Contact Me">reach out</a> if you
+                    have
                     any questions or would like to connect!
                 </p>
             </div>
