--- a/index.html
+++ b/index.html
@@ -103,27 +103,21 @@
                     one -- though I find the parallels between Math Bio and modern ML to be <a
                         href="https://xkcd.com/1605/" title="Relevant XKCD">fascinating</a> and overlooked.
                     My focus lies in posttraining research involving RL and both human and synthetic data. I am very,
-                    very
-                    interested in the idea of self-improving systems and how best to leverage humans to achieve this.
-                    I've
-                    always liked the metaphor of midwife for my work -- the next era of computing is coming, and even if
-                    we
-                    wanted to stop it we couldn't -- the most impactful and high leverage place for me to be in this
-                    liminal
-                    period is in the room, helping to ensure that we collectively stick the landing, and doing
-                    everything we
-                    can to ensure that the delivery of this epochal change results in a world where humanity is
-                    exemplified,
-                    not diminished, and where the tremendous power of these systems are harnessed for the broad
-                    flourishing
-                    of all humanity.
+                    very interested in the idea of self-improving systems and how best to leverage humans to achieve
+                    these ends.
+                </p>
+                <p>
+                    I've always liked the metaphor of midwife for my work -- the next era of computing is coming, and
+                    even if we wanted to stop it we couldn't -- the most impactful and high leverage place for me to be
+                    in this liminal period is in the room, helping to ensure that we collectively stick the landing, and
+                    doing everything we can to ensure that the delivery of this epochal change results in a world where
+                    humanity is exemplified, not diminished, and where the tremendous power of these systems are
+                    harnessed for the broad flourishing of all humanity.
                 </p>
                 <p>
                     This website contains information about my background, research interests, teaching resources, and
-                    current
-                    activities. Please don't hesitate to <a href="contact.html" title="Contact Me">reach out</a> if you
-                    have
-                    any questions or would like to connect!
+                    current activities. Please don't hesitate to <a href="contact.html" title="Contact Me">reach out</a>
+                    if you have any questions or would like to connect!
                 </p>
             </div>
         </div>
