--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                     in this liminal period is in the room, helping to ensure that we collectively stick the landing, and
                     doing everything we can to ensure that the delivery of this epochal change results in a world where
                     humanity is exemplified, not diminished, and where the tremendous power of these systems are
-                    harnessed for the broad flourishing of all humanity.
+                    harnessed for the broad flourishing of all humanity, and not just for the enrichment of the lucky
+                    few.
                 </p>
                 <p>
                     This website contains information about my background, research interests, teaching resources, and
