--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
     <!-- My CSS -->
     <link rel="stylesheet" href="main.css">
-    <title>Brydon Eastman</title>
+    <title>Brydon Eastman - Contact</title>
 </head>
 
 <body>
